src-tauri/tests/snapshots/wire_format__updater_check_reason_startup.snap
---
source: tests/wire_format.rs
assertion_line: 248
expression: "serde_json::to_value(CheckReason::Startup).unwrap()"
---
"startup"
