src-tauri/tests/snapshots/wire_format__updater_check_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 242
expression: request_args
---
{
  "reason": "manual"
}
