src-tauri/tests/snapshots/wire_format__view_state_get_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 288
expression: request_args
---
{
  "key": "layout.tabs"
}
