src-tauri/tests/snapshots/wire_format__view_state_save_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 282
expression: request_args
---
{
  "key": "layout.tabs",
  "valueJson": "{\"tabs\":[\"a\",\"b\"]}"
}
