src-tauri/tests/snapshots/wire_format__workspace_placement_local.snap
---
source: tests/wire_format.rs
expression: "serde_json::to_value(WorkspacePlacement::Local).unwrap()"
---
"local"
