src-tauri/tests/snapshots/wire_format__workspace_response.snap
---
source: tests/wire_format.rs
expression: "serde_json::to_value(&workspace).unwrap()"
---
{
  "created_at": "2026-05-15 00:00:00",
  "id": "00000000-0000-0000-0000-000000000001",
  "name": "Feature X",
  "path": "/Users/example/code/repo/.emdash-worktrees/feature-x",
  "placement": "worktree",
  "project_id": "00000000-0000-0000-0000-000000000002",
  "source_branch": {
    "branch": "main",
    "type": "local"
  },
  "status": "active",
  "updated_at": "2026-05-15 00:00:00"
}
