src-tauri/tests/snapshots/wire_format__workspace_response_local.snap
---
source: tests/wire_format.rs
expression: "serde_json::to_value(&workspace).unwrap()"
---
{
  "created_at": "2026-05-15 00:00:00",
  "id": "00000000-0000-0000-0000-000000000003",
  "name": "in-place",
  "path": "/Users/example/code/repo",
  "placement": "local",
  "project_id": "00000000-0000-0000-0000-000000000002",
  "source_branch": {
    "branch": "main",
    "type": "local"
  },
  "status": "active",
  "updated_at": "2026-05-15 00:00:00"
}
