src-tauri/tests/snapshots/wire_format__workspace_source_branch_local.snap
---
source: tests/wire_format.rs
expression: "serde_json::to_value(&s).unwrap()"
---
{
  "branch": "main",
  "type": "local"
}
